fixed contact form sizing on mobile and desktop;styled

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -179,11 +179,15 @@ a.eduLink:hover{
 form{
   margin: 0 auto;
   width: 400px;
-  border: 5px solid #4e5d6c;
+  border: 2px solid #4e5d6c;
   padding: 10px;
 }
 
-@media screen and (max-device-width:800px){
+.button-spacing{
+  margin-top: 20px;
+}
+
+@media (max-width:400px){
   form{
     width: 95%;
     border: none;
